--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,13 @@ server:
   port: 9001
 spring:
   datasource:
-#    url: jdbc:mysql://localhost:3306/itemstaffmanage?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2b8
-#    username: root
-#    password: 123
-
-    url: jdbc:mysql://10.1.64.133:3306/itemstaffmanage?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2b8
+    url: jdbc:mysql://localhost:3306/itemstaffmanage?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2b8
     username: root
-    password: root
+    password: 123
+
+#    url: jdbc:mysql://10.1.64.133:3306/itemstaffmanage?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2b8
+#    username: root
+#    password: root
   jpa:
       database: mysql
       properties:
