--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,15 +2,25 @@ server:
   port: 9001
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/itemstaffmanage?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2b8
-    username: root
-    password: 123
-
-#    url: jdbc:mysql://10.1.64.133:3306/itemstaffmanage?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2b8
+#    url: jdbc:mysql://localhost:3306/itemstaffmanage?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2b8
 #    username: root
-#    password: root
+#    password: 123
+
+    url: jdbc:mysql://10.1.64.133:3306/itemstaffmanage?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2b8
+    username: root
+    password: root
   jpa:
       database: mysql
       properties:
         hibernate:
           dialect: org.hibernate.dialect.MySQL5Dialect
+  thymeleaf:
+    cache: false
+qiniu:
+  accessKey: 4GY_U6vPAypr6zc4DkwdpYpNFK2RilZwLo-_sAjQ
+  secretKey: EY9lMY6xTnMPndGWPrgoxTNgs3uh9YktPJM_8P3s
+  bucketUrl: http://smartcampus.eduincloud.net
+  bucketName: smartcampus
+  privateBucketUrl: http://campuspri.eduincloud.net
+  privateBucketName: smartcampus-private
+  expires: 43200
