--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,19 @@ spring:
     url: jdbc:mysql://10.1.64.133:3306/itemstaffmanage?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2b8
     username: root
     password: root
+  mail:
+      host: smtp.sina.com
+      username: wondersjmail@sina.com
+      password: 123abc
+      nick: Shawn
+      properties:
+        mail:
+          debug: true
+          smtp:
+            auth: true
+            starttls:
+              enable: true
+              required: true
   jpa:
       database: mysql
       properties:
