--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,14 +6,11 @@ spring:
 #    username: root
 #    password: 123
 
-    url: jdbc:mysql://10.1.64.133:3306/itemstaffmanage?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2b8
-    username: root
-    password: root
   mail:
-      host: smtp.sina.com
-      username: wondersjmail@sina.com
-      password: 123abc
-      nick: Shawn
+      host: smtp.*****.com
+      username: ******@sina.com
+      password: ********
+      nick: *******
       properties:
         mail:
           debug: true
